# texsift

./: .gitignore  CLAUDE.md  Cargo.toml  LICENCE  PLAN.md  README.md  build.rs
.github/workflows/: release.yml
src/: lib.rs
src/model/: entry.rs  mod.rs
src/output/: colored.rs  mod.rs
src/parser/: file_stack.rs  line_joiner.rs  message.rs  mod.rs
tests/: cli.rs
