[package]
name = "texsift"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "texsift"
path = "src/bin/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["codec", "io"] }
colored = "3.1.1"
tokio-stream = "0.1.18"
clap = { version = "4", features = ["derive"] }
terminal_size = "0.4"
